@@ -1,6 +1,7 @@
 2009-05-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
-	* photoframe.py: Code refactoring. Added new class NoImage.
+	* photoframe.py: Code refactoring. Added new class NoImage &
+	  AboutDialog.
 
 2009-05-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
